--- a/pom.xml
+++ b/pom.xml
@@ -6,19 +6,7 @@
   <version>3.5.2.1</version>
   <packaging>pom</packaging>
   <name>ovirt-root</name>
-  <description>oVirt Engine Root Project</description>
-  <organization>
-    <name>oVirt.org</name>
-    <url>http://www.ovirt.org/</url>
-  </organization>
-  <ciManagement>
-    <system>jenkins</system>
-    <url>http://jenkins.ovirt.org/</url>
-  </ciManagement>
-  <scm>
-    <developerConnection>scm:git:ssh://gerrit.ovirt.org/ovirt-engine.git</developerConnection>
-    <connection>scm:git:http://gerrit.ovirt.org/p/ovirt-engine.git</connection>
-  </scm>
+  <description>KVM Manager Root Project</description>
   <!--Project Sub Modules-->
   <modules>
     <module>build-tools-root</module>
@@ -398,24 +386,12 @@
       </releases>
     </repository>
     <repository>
-      <id>codehaus</id>
-      <name>Codehaus Releases</name>
-      <url>http://repository.codehaus.org/</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
       <id>snmp4j</id>
       <name>snmp4j</name>
       <url>https://oosnmp.net/dist/release/</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
-    </repository>
-    <repository>
-      <id>powermock-repo</id>
-      <url>http://powermock.googlecode.com/svn/repo/</url>
     </repository>
     <repository>
       <!-- temporary until vdsm-jsonrpc-java-client and ovirt-host-deploy 1.3.0 released -->
