--- a/backend/manager/modules/pom.xml
+++ b/backend/manager/modules/pom.xml
@@ -35,6 +35,7 @@
     <module>services</module>
     <module>docs</module>
     <module>welcome</module>
+    <module>license</module>
   </modules>
 
   <dependencies>
@@ -50,16 +51,4 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <configuration>
-          <excludes>**/RsdlManager.java,**/RsdlIOManager.java</excludes>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
 </project>
