--- a/backend/manager/modules/restapi/jaxrs/pom.xml
+++ b/backend/manager/modules/restapi/jaxrs/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>branding</artifactId>
 			<version>${engine.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.ovirt.engine.core</groupId>
+			<artifactId>license</artifactId>
+			<version>${engine.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
