--- a/backend/manager/modules/restapi/jaxrs/pom.xml
+++ b/backend/manager/modules/restapi/jaxrs/pom.xml
@@ -3,56 +3,56 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.ovirt.engine.api</groupId>
+		<groupId>cn.lynx.emi.kvmmgr.api</groupId>
 		<artifactId>restapi-parent</artifactId>
-		<version>3.5.2.1</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>restapi-jaxrs</artifactId>
 	<packaging>jar</packaging>
-	<name>oVirt RESTful API Backend Integration JAX-RS Resources</name>
+	<name>KVM Manager RESTful API Backend Integration JAX-RS Resources</name>
 
 	<dependencies>
 		<dependency>
-			<groupId>org.ovirt.engine.api</groupId>
+			<groupId>cn.lynx.emi.kvmmgr.api</groupId>
 			<artifactId>restapi-definition</artifactId>
 			<version>${engine.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.ovirt.engine.api</groupId>
+			<groupId>cn.lynx.emi.kvmmgr.api</groupId>
 			<artifactId>interface-common-jaxrs</artifactId>
 			<version>${engine.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.ovirt.engine.api</groupId>
+			<groupId>cn.lynx.emi.kvmmgr.api</groupId>
 			<artifactId>restapi-types</artifactId>
 			<version>${engine.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.ovirt.engine.core</groupId>
+			<groupId>${engine.groupId}</groupId>
 			<artifactId>common</artifactId>
 			<version>${engine.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>org.ovirt.engine.core</groupId>
+			<groupId>${engine.groupId}</groupId>
 			<artifactId>utils</artifactId>
 			<version>${engine.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>org.ovirt.engine.core</groupId>
+			<groupId>${engine.groupId}</groupId>
 			<artifactId>branding</artifactId>
 			<version>${engine.version}</version>
 		</dependency>
 		
 		<dependency>
-			<groupId>org.ovirt.engine.core</groupId>
+			<groupId>${engine.groupId}</groupId>
 			<artifactId>license</artifactId>
 			<version>${engine.version}</version>
 		</dependency>
@@ -95,7 +95,7 @@
 		<plugins>
 			<!-- Create the JBoss module: -->
 			<plugin>
-				<groupId>org.ovirt.engine</groupId>
+				<groupId>cn.lynx.emi.kvmmgr</groupId>
 				<artifactId>jboss-modules-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
