--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -2,21 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.ovirt.engine</groupId>
+    <groupId>cn.lynx.emi.kvmmgr</groupId>
     <artifactId>root</artifactId>
-    <version>3.5.2.1</version>
+    <version>1.0.0</version>
   </parent>
   <artifactId>frontend-all</artifactId>
-  <groupId>org.ovirt.engine.ui</groupId>
+  <groupId>cn.lynx.emi.kvmmgr.ui</groupId>
   <packaging>pom</packaging>
-  <name>oVirt Modules :: Frontend</name>
+  <name>KVM Manager Modules :: Frontend</name>
   <description>An aggregator module for all frontend modules.</description>
   <modules>
     <module>webadmin</module>
   </modules>
   <properties>
-    <engine.groupId>org.ovirt.engine.ui</engine.groupId>
-    <engine.core.groupId>org.ovirt.engine.core</engine.core.groupId>
+    <engine.groupId>cn.lynx.emi.kvmmgr.ui</engine.groupId>
+    <engine.core.groupId>cn.lynx.emi.kvmmgr.core</engine.core.groupId>
     <aspectj.version>1.6.11</aspectj.version>
   </properties>
   <build>
