--- a/frontend/webadmin/modules/pom.xml
+++ b/frontend/webadmin/modules/pom.xml
@@ -2,15 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.ovirt.engine.ui</groupId>
+    <groupId>cn.lynx.emi.kvmmgr.ui</groupId>
     <artifactId>webadmin-all</artifactId>
-    <version>3.5.2.1</version>
+    <version>1.0.0</version>
   </parent>
-  <groupId>org.ovirt.engine.ui</groupId>
   <artifactId>webadmin-modules</artifactId>
   <packaging>pom</packaging>
-  <name>oVirt Modules - ui</name>
-  <description>parent POM for all oVirt modules</description>
+  <name>KVM Manager Modules - ui</name>
+  <description>parent POM for all KVM Manager modules</description>
   <modules>
     <module>gwt-extension</module>
     <module>uicompat</module>
