--- a/backend/manager/modules/builtin-extensions/pom.xml
+++ b/backend/manager/modules/builtin-extensions/pom.xml
@@ -3,11 +3,11 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.ovirt.engine.core</groupId>
+    <groupId>cn.lynx.emi.kvmmgr.core</groupId>
     <artifactId>manager-modules</artifactId>
-    <version>3.5.2.1</version>
+    <version>1.0.0</version>
   </parent>
-  <groupId>org.ovirt.engine.extensions</groupId>
+  <groupId>cn.lynx.emi.kvmmgr.extensions</groupId>
   <artifactId>builtin</artifactId>
   <name>builtin-extensions</name>
   <dependencies>
@@ -46,8 +46,8 @@
       <version>${engine.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.ovirt.engine.api</groupId>
-      <artifactId>ovirt-engine-extensions-api</artifactId>
+      <groupId>cn.lynx.emi.kvmmgr.api</groupId>
+      <artifactId>kvmmgr-engine-extensions-api</artifactId>
       <version>${org.ovirt.engine.api.ovirt-engine-extensions-api.version}</version>
     </dependency>
   </dependencies>
@@ -55,51 +55,9 @@
     <plugins>
       <!-- Create the JBoss module: -->
       <plugin>
-        <groupId>org.ovirt.engine</groupId>
+        <groupId>cn.lynx.emi.kvmmgr</groupId>
         <artifactId>jboss-modules-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
-<profiles>
-    <profile>
-        <id>findbugs</id>
-        <activation>
-            <activeByDefault>true</activeByDefault>
-        </activation>
-        <build>
-            <plugins>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>findbugs-maven-plugin</artifactId>
-                    <version>${findbugs.version}</version>
-                    <configuration>
-                        <xmlOutput>true</xmlOutput>
-                        <!-- Optional directory to put findbugs xdoc xml report -->
-                        <excludeFilterFile> ${basedir}/exclude-filters.xml</excludeFilterFile>
-                        <xmlOutputDirectory>target/site</xmlOutputDirectory>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </build>
-    </profile>
-
-    <profile>
-        <id>findbugs-general</id>
-        <build>
-            <plugins>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>findbugs-maven-plugin</artifactId>
-                    <version>${findbugs.version}</version>
-                    <configuration>
-                        <xmlOutput>true</xmlOutput>
-                        <!-- Optional directory to put findbugs xdoc xml report -->
-                        <excludeFilterFile> ${basedir}/exclude-filters.xml, ${basedir}/../../../../exclude-filters-general.xml</excludeFilterFile>
-                        <xmlOutputDirectory>target/site</xmlOutputDirectory>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </build>
-    </profile>
-  </profiles>
 </project>
