--- a/backend/manager/modules/dal/pom.xml
+++ b/backend/manager/modules/dal/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.ovirt.engine.core</groupId>
+    <groupId>cn.lynx.emi.kvmmgr.core</groupId>
     <artifactId>manager-modules</artifactId>
-    <version>3.5.2.1</version>
+    <version>1.0.0</version>
   </parent>
   <artifactId>dal</artifactId>
   <packaging>jar</packaging>
@@ -38,10 +38,6 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.transaction</groupId>
@@ -83,7 +79,7 @@
 
       <!-- Create the JBoss module: -->
       <plugin>
-        <groupId>org.ovirt.engine</groupId>
+        <groupId>cn.lynx.emi.kvmmgr</groupId>
         <artifactId>jboss-modules-maven-plugin</artifactId>
       </plugin>
 
