--- a/backend/manager/modules/docs/pom.xml
+++ b/backend/manager/modules/docs/pom.xml
@@ -8,14 +8,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.ovirt.engine.core</groupId>
+    <groupId>cn.lynx.emi.kvmmgr.core</groupId>
     <artifactId>manager-modules</artifactId>
-    <version>3.5.2.1</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>docs</artifactId>
   <packaging>war</packaging>
-  <name>oVirt Engine Web Docs</name>
+  <name>KVM Manager Engine Web Docs</name>
 
   <dependencies>
 
