--- a/backend/manager/modules/extensions-manager/pom.xml
+++ b/backend/manager/modules/extensions-manager/pom.xml
@@ -6,9 +6,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.ovirt.engine.core</groupId>
+    <groupId>cn.lynx.emi.kvmmgr.core</groupId>
     <artifactId>manager-modules</artifactId>
-    <version>3.5.2.1</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>extensions-manager</artifactId>
