--- a/backend/manager/modules/logger/pom.xml
+++ b/backend/manager/modules/logger/pom.xml
@@ -6,9 +6,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.ovirt.engine.core</groupId>
+    <groupId>cn.lynx.emi.kvmmgr.core</groupId>
     <artifactId>manager-modules</artifactId>
-    <version>3.5.2.1</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>logger</artifactId>
@@ -31,8 +31,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.ovirt.engine.api</groupId>
-      <artifactId>ovirt-engine-extensions-api</artifactId>
+      <groupId>cn.lynx.emi.kvmmgr.api</groupId>
+      <artifactId>kvmmgr-engine-extensions-api</artifactId>
       <version>${org.ovirt.engine.api.ovirt-engine-extensions-api.version}</version>
     </dependency>
 
@@ -44,7 +44,7 @@
 
       <!-- Create the JBoss module: -->
       <plugin>
-        <groupId>org.ovirt.engine</groupId>
+        <groupId>cn.lynx.emi.kvmmgr</groupId>
         <artifactId>jboss-modules-maven-plugin</artifactId>
       </plugin>
 
