--- a/backend/manager/modules/restapi/interface/common/pom.xml
+++ b/backend/manager/modules/restapi/interface/common/pom.xml
@@ -2,15 +2,15 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.ovirt.engine.api</groupId>
+    <groupId>cn.lynx.emi.kvmmgr.api</groupId>
     <artifactId>interface</artifactId>
-    <version>3.5.2.1</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>common-parent</artifactId>
   <packaging>pom</packaging>
 
-  <name>oVirt Engine API Commom Parent POM</name>
+  <name>KVM Manager Engine API Commom Parent POM</name>
 
   <modules>
     <module>jaxrs</module>
