--- a/backend/manager/pom.xml
+++ b/backend/manager/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.ovirt.engine.core</groupId>
+    <groupId>cn.lynx.emi.kvmmgr.core</groupId>
     <artifactId>backend</artifactId>
-    <version>3.5.2.1</version>
+    <version>1.0.0</version>
   </parent>
   <artifactId>manager</artifactId>
   <packaging>pom</packaging>
-  <name>oVirt Manager</name>
-  <description>parent POM for all oVirt Manager</description>
+  <name>KVM Manager Module Manager</name>
+  <description>parent POM for all KVM Manager</description>
   <modules>
     <module>dependencies</module>
     <module>modules</module>
