--- a/backend/manager/tools/pom.xml
+++ b/backend/manager/tools/pom.xml
@@ -6,15 +6,15 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.ovirt.engine.core</groupId>
+		<groupId>cn.lynx.emi.kvmmgr.core</groupId>
 		<artifactId>manager</artifactId>
-		<version>3.5.2.1</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>tools</artifactId>
 	<packaging>jar</packaging>
-	<name>oVirt Engine Tools</name>
-	<description>oVirt Engine Tools</description>
+	<name>KVM Manager Engine Tools</name>
+	<description>KVM Manager Engine Tools</description>
 
 	<dependencies>
 
