--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -2,24 +2,24 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.ovirt.engine</groupId>
+    <groupId>cn.lynx.emi.kvmmgr</groupId>
     <artifactId>root</artifactId>
-    <version>3.5.2.1</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>backend</artifactId>
-  <groupId>org.ovirt.engine.core</groupId>
+  <groupId>cn.lynx.emi.kvmmgr.core</groupId>
   <packaging>pom</packaging>
 
-  <name>oVirt Modules - backend</name>
-  <description>parent POM for all oVirt modules</description>
+  <name>KVM Manager Modules - backend</name>
+  <description>parent POM for all KVM Manager modules</description>
 
   <modules>
     <module>manager</module>
   </modules>
 
   <properties>
-    <engine.groupId>org.ovirt.engine.core</engine.groupId>
+    <engine.groupId>cn.lynx.emi.kvmmgr.core</engine.groupId>
   </properties>
 
 </project>
