--- a/build-tools-root/jboss-modules-maven-plugin/pom.xml
+++ b/build-tools-root/jboss-modules-maven-plugin/pom.xml
@@ -8,12 +8,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.ovirt.engine</groupId>
+    <groupId>cn.lynx.emi.kvmmgr</groupId>
     <artifactId>build-tools-root</artifactId>
-    <version>3.5.2.1</version>
+    <version>1.0.0</version>
   </parent>
 
-  <name>oVirt JBoss Modules Maven Plugin</name>
+  <name>KVM Manager JBoss Modules Maven Plugin</name>
 
   <description>
     Maven Plugin used to generate and attach an artifact containing
