--- a/build-tools-root/pom.xml
+++ b/build-tools-root/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.ovirt.engine</groupId>
+    <groupId>cn.lynx.emi.kvmmgr</groupId>
     <artifactId>root</artifactId>
-    <version>3.5.2.1</version>
+    <version>1.0.0</version>
   </parent>
   <artifactId>build-tools-root</artifactId>
   <packaging>pom</packaging>
-  <name>oVirt Build Tools root</name>
-  <description>Parent pom of build tools available for use by oVirt modules</description>
+  <name>KVM Manager Build Tools root</name>
+  <description>Parent pom of build tools available for use by KVM Manager modules</description>
   <modules>
     <module>jboss-modules-maven-plugin</module>
   </modules>
