--- a/frontend/webadmin/modules/webadmin/pom.xml
+++ b/frontend/webadmin/modules/webadmin/pom.xml
@@ -4,13 +4,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>webadmin-modules</artifactId>
-		<groupId>org.ovirt.engine.ui</groupId>
-		<version>3.5.2.1</version>
+		<groupId>cn.lynx.emi.kvmmgr.ui</groupId>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>webadmin</artifactId>
 	<packaging>war</packaging>
 	<name>WebAdmin</name>
-	<description>oVirt Web based Administration GUI</description>
+	<description>KVM Manager Web based Administration GUI</description>
 	<dependencies>
 		<!-- Google Web Toolkit dependencies -->
 		<dependency>
