--- a/frontend/webadmin/pom.xml
+++ b/frontend/webadmin/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.ovirt.engine.ui</groupId>
+    <groupId>cn.lynx.emi.kvmmgr.ui</groupId>
     <artifactId>frontend-all</artifactId>
-    <version>3.5.2.1</version>
+    <version>1.0.0</version>
   </parent>
   <artifactId>webadmin-all</artifactId>
   <packaging>pom</packaging>
-  <name>oVirt Modules :: Webadmin</name>
+  <name>KVM Manager Modules :: Webadmin</name>
   <description>An Aggregator module for all UI modules</description>
   <modules>
     <module>modules</module>
