--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.ovirt.engine</groupId>
+  <groupId>cn.lynx.emi.kvmmgr</groupId>
   <artifactId>root</artifactId>
-  <version>3.5.2.1</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
-  <name>ovirt-root</name>
+  <name>kvmmgr-root</name>
   <description>KVM Manager Root Project</description>
   <!--Project Sub Modules-->
   <modules>
@@ -17,7 +17,7 @@
   </modules>
 
   <properties>
-    <application.baseuri>/ovirt-engine/api</application.baseuri>
+    <application.baseuri>/kvmmgr-engine/api</application.baseuri>
     <!--  Version Info -->
     <engine.version>${project.version}</engine.version>
 
@@ -62,7 +62,6 @@
     <slf4j-jdk14.version>1.5.6</slf4j-jdk14.version>
     <vdsm-jsonrpc-java.version>1.0.15</vdsm-jsonrpc-java.version>
     <gwt.version>2.5.1</gwt.version>
-    <findbugs.version>2.5.2</findbugs.version>
     <mockito.version>1.9.0</mockito.version>
     <javassist.version>3.12.0.GA</javassist.version>
     <javax.mail.version>1.4.4</javax.mail.version>
@@ -90,7 +89,6 @@
     <openstack-client.version>3.0.6</openstack-client.version>
 
     <!-- Plugins Versions -->
-    <maven-surefire-plugin.version>2.7.2</maven-surefire-plugin.version>
     <maven-resources-plugin.version>2.4.3</maven-resources-plugin.version>
     <exec-maven-plugin.version>1.2</exec-maven-plugin.version>
     <maven-ejb-plugin.version>2.3</maven-ejb-plugin.version>
@@ -160,12 +158,6 @@
             <artifactId>spring-tx</artifactId>
           </exclusion>
         </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-test</artifactId>
-        <version>${spring.test.version}</version>
-        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>commons-codec</groupId>
@@ -325,18 +317,6 @@
   </dependencyManagement>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>${mockito.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
       <version>${commons-logging.version}</version>
@@ -453,12 +433,6 @@
           </configuration>
         </plugin>
         <plugin>
-          <artifactId>maven-eclipse-plugin</artifactId>
-          <configuration>
-            <useProjectReferences>true</useProjectReferences>
-          </configuration>
-        </plugin>
-        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
           <version>${maven-resources-plugin.version}</version>
@@ -506,7 +480,7 @@
              automatically executed in the package phase of any project
              that uses the plugin: -->
         <plugin>
-          <groupId>org.ovirt.engine</groupId>
+          <groupId>cn.lynx.emi.kvmmgr</groupId>
           <artifactId>jboss-modules-maven-plugin</artifactId>
           <version>1.1</version>
           <executions>
