--- a/backend/manager/dependencies/pom.xml
+++ b/backend/manager/dependencies/pom.xml
@@ -82,7 +82,7 @@
     </dependency>
 
     <dependency>
-      <groupId>org.ovirt.engine.api</groupId>
+      <groupId>cn.lynx.emi.kvmmgr.api</groupId>
       <artifactId>ovirt-engine-extensions-api</artifactId>
       <version>${org.ovirt.engine.api.ovirt-engine-extensions-api.version}</version>
     </dependency>
