--- a/backend/manager/modules/utils/pom.xml
+++ b/backend/manager/modules/utils/pom.xml
@@ -15,8 +15,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.ovirt.engine.api</groupId>
-			<artifactId>ovirt-engine-extensions-api</artifactId>
+			<groupId>cn.lynx.emi.kvmmgr.api</groupId>
+			<artifactId>kvmmgr-engine-extensions-api</artifactId>
 			<version>${org.ovirt.engine.api.ovirt-engine-extensions-api.version}</version>
 		</dependency>
 		<dependency>
