--- a/backend/manager/modules/restapi/interface/definition/pom.xml
+++ b/backend/manager/modules/restapi/interface/definition/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>cn.lynx.emi.kvmmgr.api</groupId>
+    <groupId>org.ovirt.engine.api</groupId>
     <artifactId>interface</artifactId>
     <version>1.0.0</version>
   </parent>
@@ -43,13 +43,13 @@
     </dependency>
 
     <dependency>
-      <groupId>${engine.groupId}</groupId>
+      <groupId>org.ovirt.engine.core</groupId>
       <artifactId>uutils</artifactId>
       <version>${engine.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>${engine.groupId}</groupId>
+      <groupId>org.ovirt.engine.core</groupId>
       <artifactId>common</artifactId>
       <version>${engine.version}</version>
     </dependency>
@@ -77,7 +77,7 @@
     </dependency>
     
     <dependency>
-    	<groupId>cn.lynx.emi.kvmmgr.core</groupId>
+    	<groupId>org.ovirt.engine.core</groupId>
     	<artifactId>license</artifactId>
     	<version>${engine.version}</version>
     </dependency>
@@ -108,7 +108,7 @@
 
       <!-- Create the JBoss module: -->
       <plugin>
-        <groupId>cn.lynx.emi.kvmmgr</groupId>
+        <groupId>org.ovirt.engine</groupId>
         <artifactId>jboss-modules-maven-plugin</artifactId>
       </plugin>
 
