--- a/backend/manager/dependencies/pom.xml
+++ b/backend/manager/dependencies/pom.xml
@@ -6,7 +6,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+    <groupId>org.ovirt.engine.core</groupId>
     <artifactId>manager</artifactId>
     <version>1.0.0</version>
   </parent>
@@ -82,8 +82,8 @@
     </dependency>
 
     <dependency>
-      <groupId>cn.lynx.emi.kvmmgr.api</groupId>
-      <artifactId>kvmmgr-engine-extensions-api</artifactId>
+      <groupId>org.ovirt.engine.api</groupId>
+      <artifactId>ovirt-engine-extensions-api</artifactId>
       <version>${org.ovirt.engine.api.ovirt-engine-extensions-api.version}</version>
     </dependency>
 
@@ -327,7 +327,7 @@
     <plugins>
 
         <plugin>
-          <groupId>cn.lynx.emi.kvmmgr</groupId>
+          <groupId>org.ovirt.engine</groupId>
           <artifactId>jboss-modules-maven-plugin</artifactId>
           <configuration>
             <generateIndex>false</generateIndex>
@@ -388,9 +388,9 @@
               </module>
 
               <module>
-                <groupId>cn.lynx.emi.kvmmgr.api</groupId>
-                <artifactId>kvmmgr-engine-extensions-api</artifactId>
-                <moduleName>cn.lynx.emi.kvmmgr.api.kvmmgr-engine-extensions-api</moduleName>
+                <groupId>org.ovirt.engine.api</groupId>
+                <artifactId>ovirt-engine-extensions-api</artifactId>
+                <moduleName>org.ovirt.engine.api.ovirt-engine-extensions-api</moduleName>
               </module>
 
               <module>
