--- a/backend/manager/modules/builtin-extensions/pom.xml
+++ b/backend/manager/modules/builtin-extensions/pom.xml
@@ -3,11 +3,11 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+    <groupId>org.ovirt.engine.core</groupId>
     <artifactId>manager-modules</artifactId>
     <version>1.0.0</version>
   </parent>
-  <groupId>cn.lynx.emi.kvmmgr.extensions</groupId>
+  <groupId>org.ovirt.engine.extensions</groupId>
   <artifactId>builtin</artifactId>
   <name>builtin-extensions</name>
   <dependencies>
@@ -46,8 +46,8 @@
       <version>${engine.version}</version>
     </dependency>
     <dependency>
-      <groupId>cn.lynx.emi.kvmmgr.api</groupId>
-      <artifactId>kvmmgr-engine-extensions-api</artifactId>
+      <groupId>org.ovirt.engine.api</groupId>
+      <artifactId>ovirt-engine-extensions-api</artifactId>
       <version>${org.ovirt.engine.api.ovirt-engine-extensions-api.version}</version>
     </dependency>
   </dependencies>
@@ -55,7 +55,7 @@
     <plugins>
       <!-- Create the JBoss module: -->
       <plugin>
-        <groupId>cn.lynx.emi.kvmmgr</groupId>
+        <groupId>org.ovirt.engine</groupId>
         <artifactId>jboss-modules-maven-plugin</artifactId>
       </plugin>
     </plugins>
