--- a/backend/manager/modules/extensions-api-root/pom.xml
+++ b/backend/manager/modules/extensions-api-root/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>kvmmgr-engine-extensions-api-root</artifactId>
-	<groupId>cn.lynx.emi.kvmmgr.api</groupId>
+	<artifactId>ovirt-engine-extensions-api-root</artifactId>
+	<groupId>org.ovirt.engine.api</groupId>
 	<version>0.0.0</version>
 
 	<packaging>pom</packaging>
