--- a/backend/manager/modules/license/pom.xml
+++ b/backend/manager/modules/license/pom.xml
@@ -4,7 +4,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>cn.lynx.emi.kvmmgr.core</groupId>
+		<groupId>org.ovirt.engine.core</groupId>
 		<artifactId>manager-modules</artifactId>
 		<version>1.0.0</version>
 	</parent>
