--- a/backend/manager/modules/restapi/interface/pom.xml
+++ b/backend/manager/modules/restapi/interface/pom.xml
@@ -3,7 +3,7 @@ ven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>cn.lynx.emi.kvmmgr.api</groupId>
+    <groupId>org.ovirt.engine.api</groupId>
     <artifactId>restapi-parent</artifactId>
     <version>1.0.0</version>
   </parent>
