--- a/backend/manager/modules/restapi/pom.xml
+++ b/backend/manager/modules/restapi/pom.xml
@@ -2,13 +2,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+    <groupId>org.ovirt.engine.core</groupId>
     <artifactId>manager-modules</artifactId>
     <version>1.0.0</version>
   </parent>
 
   <artifactId>restapi-parent</artifactId>
-  <groupId>cn.lynx.emi.kvmmgr.api</groupId>
+  <groupId>org.ovirt.engine.api</groupId>
   <packaging>pom</packaging>
   <name>KVM Manager RESTful API Backend Integration</name>
 
