--- a/backend/manager/modules/restapi/types/pom.xml
+++ b/backend/manager/modules/restapi/types/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>cn.lynx.emi.kvmmgr.api</groupId>
+		<groupId>org.ovirt.engine.api</groupId>
 		<artifactId>restapi-parent</artifactId>
 		<version>1.0.0</version>
 	</parent>
@@ -14,26 +14,26 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>cn.lynx.emi.kvmmgr.api</groupId>
+			<groupId>org.ovirt.engine.api</groupId>
 			<artifactId>restapi-definition</artifactId>
 			<version>${engine.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>cn.lynx.emi.kvmmgr.api</groupId>
+			<groupId>org.ovirt.engine.api</groupId>
 			<artifactId>interface-common-jaxrs</artifactId>
 			<version>${engine.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>cn.lynx.emi.kvmmgr.core</groupId>
+			<groupId>org.ovirt.engine.core</groupId>
 			<artifactId>common</artifactId>
 			<version>${engine.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>cn.lynx.emi.kvmmgr.core</groupId>
+			<groupId>org.ovirt.engine.core</groupId>
 			<artifactId>utils</artifactId>
 			<version>${engine.version}</version>
 			<scope>provided</scope>
@@ -61,7 +61,7 @@
 
 			<!-- Create the JBoss module: -->
 			<plugin>
-				<groupId>cn.lynx.emi.kvmmgr</groupId>
+				<groupId>org.ovirt.engine</groupId>
 				<artifactId>jboss-modules-maven-plugin</artifactId>
 			</plugin>
 
