--- a/backend/manager/modules/restapi/webapp/pom.xml
+++ b/backend/manager/modules/restapi/webapp/pom.xml
@@ -6,7 +6,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>cn.lynx.emi.kvmmgr.api</groupId>
+    <groupId>org.ovirt.engine.api</groupId>
     <artifactId>restapi-parent</artifactId>
     <version>1.0.0</version>
   </parent>
