--- a/backend/manager/modules/root/pom.xml
+++ b/backend/manager/modules/root/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>cn.lynx.emi.kvmmgr.core</groupId>
+		<groupId>org.ovirt.engine.core</groupId>
 		<artifactId>manager-modules</artifactId>
 		<version>1.0.0</version>
 	</parent>
