--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>cn.lynx.emi.kvmmgr</groupId>
+    <groupId>org.ovirt.engine</groupId>
     <artifactId>root</artifactId>
     <version>1.0.0</version>
   </parent>
@@ -21,7 +21,7 @@
     <!-- Internal Deps -->
     <!-- ** JARs -->
     <dependency>
-      <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+      <groupId>org.ovirt.engine.core</groupId>
       <artifactId>vdsbroker</artifactId>
       <version>${engine.version}</version>
       <type>jar</type>
@@ -29,42 +29,42 @@
 
     <!-- WARS -->
     <dependency>
-      <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+      <groupId>org.ovirt.engine.core</groupId>
       <artifactId>root-war</artifactId>
       <version>${engine.version}</version>
       <type>war</type>
     </dependency>
 
     <dependency>
-      <groupId>cn.lynx.emi.kvmmgr.ui</groupId>
+      <groupId>org.ovirt.engine.ui</groupId>
       <artifactId>userportal</artifactId>
       <version>${engine.version}</version>
       <type>war</type>
     </dependency>
 
     <dependency>
-      <groupId>cn.lynx.emi.kvmmgr.ui</groupId>
+      <groupId>org.ovirt.engine.ui</groupId>
       <artifactId>webadmin</artifactId>
       <version>${engine.version}</version>
       <type>war</type>
     </dependency>
 
     <dependency>
-      <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+      <groupId>org.ovirt.engine.core</groupId>
       <artifactId>services</artifactId>
       <version>${engine.version}</version>
       <type>war</type>
     </dependency>
 
     <dependency>
-      <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+      <groupId>org.ovirt.engine.core</groupId>
       <artifactId>docs</artifactId>
       <version>${engine.version}</version>
       <type>war</type>
     </dependency>
 
     <dependency>
-      <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+      <groupId>org.ovirt.engine.core</groupId>
       <artifactId>welcome</artifactId>
       <version>${engine.version}</version>
       <type>war</type>
@@ -72,14 +72,14 @@
 
     <!-- ** EJB-JARs -->
     <dependency>
-      <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+      <groupId>org.ovirt.engine.core</groupId>
       <artifactId>scheduler</artifactId>
       <version>${engine.version}</version>
       <type>ejb</type>
     </dependency>
 
     <dependency>
-      <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+      <groupId>org.ovirt.engine.core</groupId>
       <artifactId>bll</artifactId>
       <version>${engine.version}</version>
       <type>ejb</type>
@@ -183,42 +183,42 @@
           <modules>
             <!-- ** WARs -->
             <webModule>
-              <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+              <groupId>org.ovirt.engine.core</groupId>
               <artifactId>root-war</artifactId>
               <bundleFileName>root.war</bundleFileName>
               <contextRoot>/</contextRoot>
             </webModule>
 
             <webModule>
-              <groupId>cn.lynx.emi.kvmmgr.ui</groupId>
+              <groupId>org.ovirt.engine.ui</groupId>
               <artifactId>userportal</artifactId>
               <bundleFileName>userportal.war</bundleFileName>
               <contextRoot>/kvmmgr-engine/userportal</contextRoot>
             </webModule>
 
             <webModule>
-              <groupId>cn.lynx.emi.kvmmgr.ui</groupId>
+              <groupId>org.ovirt.engine.ui</groupId>
               <artifactId>webadmin</artifactId>
               <bundleFileName>webadmin.war</bundleFileName>
               <contextRoot>/kvmmgr-engine/webadmin</contextRoot>
             </webModule>
 
             <webModule>
-              <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+              <groupId>org.ovirt.engine.core</groupId>
               <artifactId>services</artifactId>
               <bundleFileName>services.war</bundleFileName>
               <contextRoot>/kvmmgr-engine/services</contextRoot>
             </webModule>
 
             <webModule>
-              <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+              <groupId>org.ovirt.engine.core</groupId>
               <artifactId>docs</artifactId>
               <bundleFileName>docs.war</bundleFileName>
               <contextRoot>/kvmmgr-engine/docs</contextRoot>
             </webModule>
 
             <webModule>
-              <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+              <groupId>org.ovirt.engine.core</groupId>
               <artifactId>welcome</artifactId>
               <bundleFileName>welcome.war</bundleFileName>
               <contextRoot>/kvmmgr-engine</contextRoot>
@@ -226,13 +226,13 @@
 
             <!-- ** EJB-JARs -->
             <ejbModule>
-              <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+              <groupId>org.ovirt.engine.core</groupId>
               <artifactId>scheduler</artifactId>
               <bundleFileName>scheduler.jar</bundleFileName>
             </ejbModule>
 
             <ejbModule>
-              <groupId>cn.lynx.emi.kvmmgr.core</groupId>
+              <groupId>org.ovirt.engine.core</groupId>
               <artifactId>bll</artifactId>
               <bundleFileName>bll.jar</bundleFileName>
             </ejbModule>
