--- a/frontend/webadmin/modules/uiadmin/pom.xml
+++ b/frontend/webadmin/modules/uiadmin/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>cn.lynx.emi.kvmmgr.ui</groupId>
+    <groupId>org.ovirt.engine.ui</groupId>
     <artifactId>webadmin-modules</artifactId>
     <version>1.0.0</version>
   </parent>
