--- a/frontend/webadmin/modules/uicommonweb/pom.xml
+++ b/frontend/webadmin/modules/uicommonweb/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>cn.lynx.emi.kvmmgr.ui</groupId>
+        <groupId>org.ovirt.engine.ui</groupId>
         <artifactId>webadmin-modules</artifactId>
         <version>1.0.0</version>
     </parent>
