--- a/frontend/webadmin/modules/userportal-gwtp/pom.xml
+++ b/frontend/webadmin/modules/userportal-gwtp/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>webadmin-modules</artifactId>
-		<groupId>cn.lynx.emi.kvmmgr.ui</groupId>
+		<groupId>org.ovirt.engine.ui</groupId>
 		<version>1.0.0</version>
 	</parent>
 	<artifactId>userportal</artifactId>
