--- a/mavenmake/pom.xml
+++ b/mavenmake/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>cn.lynx.emi.kvmmgr</groupId>
+        <groupId>org.ovirt.engine</groupId>
         <artifactId>root</artifactId>
         <version>1.0.0</version>
     </parent>
