--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>cn.lynx.emi.kvmmgr</groupId>
+  <groupId>org.ovirt.engine</groupId>
   <artifactId>root</artifactId>
   <version>1.0.0</version>
   <packaging>pom</packaging>
-  <name>kvmmgr-root</name>
+  <name>ovirt-root</name>
   <description>KVM Manager Root Project</description>
   <!--Project Sub Modules-->
   <modules>
@@ -480,7 +480,7 @@
              automatically executed in the package phase of any project
              that uses the plugin: -->
         <plugin>
-          <groupId>cn.lynx.emi.kvmmgr</groupId>
+          <groupId>org.ovirt.engine</groupId>
           <artifactId>jboss-modules-maven-plugin</artifactId>
           <version>1.1</version>
           <executions>
