--- a/frontend/webadmin/modules/webadmin/pom.xml
+++ b/frontend/webadmin/modules/webadmin/pom.xml
@@ -206,7 +206,7 @@
 							<runTarget>ovirt-engine/webadmin/WebAdmin.html</runTarget>
 							<module>org.ovirt.engine.ui.webadmin.WebAdmin</module>
 							<webappDirectory>${project.build.directory}/generated-gwt</webappDirectory>
-        					<extraJvmArgs>-Xmx12G -XX:MaxPermSize=2048M -XX:PermSize=512M</extraJvmArgs>
+        					<extraJvmArgs>-Xmx10240M -XX:MaxPermSize=4096M -XX:PermSize=512M</extraJvmArgs>
 						</configuration>
 						<executions>
 							<execution>
