--- a/backend/manager/modules/dal/src/main/resources/engine-db-engine.properties
+++ b/backend/manager/modules/dal/src/main/resources/engine-db-engine.properties
@@ -1,2 +1,2 @@
 # Database dialect
-DbEngineDialect=${engine.db.dbengine.dialect}
+DbEngineDialect=org.ovirt.engine.core.dal.dbbroker.PostgresDbEngineDialect
